--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,57 @@
-.App {
-  text-align: center;
+
+html, body, #root {
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.PageWrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+
+.header {
+  background: lightgreen;
+  height: 200px;
+  flex-grow: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grow-vertically {
+  flex-grow: 1;
+  display: flex;
+}
+
+
+.sidebar {
+  width: 212px;
+  min-width: 212px;
+  background: lightblue;
+  border: 1px solid black;
+}
+
+.content {
+  flex-grow: 1;
+  background: lightyellow;
+}
+
+.loading-info {
+  font-size: 16px;
+  font-weight: bold;
+  padding: 30px;
+}
+
+
+.loader {
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
